--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portafolio-tofubear",
-  "version": "0.1.0",
+  "version": "2.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "react-typed": "^1.2.0",
     "swiper": "^8.0.6",
     "web-vitals": "^2.1.4"
   },
